updated image gallery CSS to prevent stretching

--- a/css/style.css
+++ b/css/style.css
@@ -515,6 +515,7 @@ footer img {
 	height: auto;
 	border-radius: 5px;
 	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+	object-fit: cover;
 }
 
 #closeGallery {
@@ -600,6 +601,14 @@ footer img {
 
 	button {
 		font-size: 2.7vh;
+	}
+
+	#bigImage {
+		width: auto;
+		height: auto;
+		border-radius: 5px;
+		box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+		object-fit: cover;
 	}
 }
 
